# Codex-test

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt
.codex/: state.json
.github/: PULL_REQUEST_TEMPLATE.md  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: Auto_PR_Merger.yml  auto-pr-merge.yml  build-addon.yml  ci.yml  docs.yml  release.yml
addons/: blender_tools.py
addons/blender_tools/: __init__.py  operators.py  optimization.py
addons/blender_tools/animation/: __init__.py  operators.py
addons/blender_tools/baking/: operators.py
addons/blender_tools/core/: prefs.py
addons/blender_tools/exporter/: operators.py
addons/blender_tools/materials/: operators.py
addons/blender_tools/optimize/: operators.py
addons/blender_tools/ui/: panel.py
addons/blender_tools/uv/: operators.py
blender_tools/: __init__.py  animation.py  cli.py  export.py  optimize.py  types.pyi
blender_tools/scenesim/: __init__.py  adapters.py  fake_scene.py
docs/: STATELOG.md
examples/: spaceship.blend
scripts/: __init__.py  animation.py  auto_fix.py  blender_toolkit.py  commitlint.py  export.py  format.sh  install.sh  lint.sh  optimize.py  precommit_bootstrap.sh  resolve-merge-conflicts.sh  shader.py  test.sh  typecheck.sh
tests/: test_addon_import.py  test_animation.py  test_blender_toolkit.py  test_cleanup_operator.py  test_cli.py  test_export.py  test_hello_operator.py  test_operators.py  test_optimization_cleanup.py  test_optimize.py  test_remove_duplicate_vertices_operator.py  test_shader.py  test_stub_bpy.py
