[project]
name = "blender-tools"
version = "0.1.0"
description = "Blender 4.3.2 addon"
requires-python = ">=3.11"
authors = [{name = "Codex"}]
readme = "README.md"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
disallow_untyped_defs = true
strict_optional = true

[tool.pytest.ini_options]
addopts = "-q"

[tool.semantic_release]
version_variable = "addons/blender_tools.py:__version__"
branch = "main"
commit_message = "chore(release): {version}"
changelog_file = "CHANGELOG.md"
