[tool.poetry]
name = "blender-ultimate-scripting-suite"
version = "0.1.0"
description = "CLI utilities for planning Blender exports, optimizations, and animation operations without Blender runtime."
authors = ["Blender Ultimate Scripting Suite <dev@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "blender_tools" }]

[tool.poetry.dependencies]
python = "^3.11"
rich = "14.1.0"
"fake-bpy-module-4.3" = "20250130"

[tool.poetry.group.dev.dependencies]
black = "24.3.0"
ruff = "0.1.8"
isort = "5.12.0"
mypy = "1.7.1"
pytest = "7.4.3"
pytest-cov = "4.1.0"
pydocstyle = "6.3.0"
bandit = "1.7.5"
pre-commit = "3.5.0"
pbr = "5.11.1"
pip-audit = "2.9.0"
python-semantic-release = "10.4.1"

[tool.poetry.scripts]
"blender-tools" = "blender_tools.cli:main"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
select = ["E", "F", "I", "UP", "B"]
line-length = 100

[tool.pydocstyle]
convention = "google"
add-ignore = ["D104", "D105", "D107"]

[tool.mypy]
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true

[tool.coverage.run]
source = ["blender_tools"]
branch = true

[tool.semantic_release]
version_variable = "blender_tools/__init__.py:__version__"

